--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -19,7 +19,7 @@ repository:
   # private: false
 
   # Either `true` to enable issues for this repository, `false` to disable them.
-  # has_issues: true
+  has_issues: true
 
   # Either `true` to enable projects for this repository, or `false` to disable them.
   # If projects are disabled for the organization, passing `true` will cause an API error.
@@ -32,7 +32,7 @@ repository:
   # has_downloads: true
 
   # Updates the default branch for this repository.
-  default_branch: master
+  default_branch: main
 
   # Either `true` to allow squash-merging pull requests, or `false` to prevent
   # squash-merging.
@@ -58,19 +58,19 @@ repository:
   # enable_vulnerability_alerts: true
 
 # Labels: define labels for Issues and Pull Requests
-# labels:
-#   - name: bug
-#     color: CC0000
-#     description: An issue with the system 🐛.
+labels:
+  - name: bug
+    color: CC0000
+    description: An issue with the system 🐛.
 
-#   - name: feature
-#     # If including a `#`, make sure to wrap it with quotes!
-#     color: '#336699'
-#     description: New functionality.
+  - name: feature
+    # If including a `#`, make sure to wrap it with quotes!
+    color: '#336699'
+    description: New functionality.
 
-#   - name: Help Wanted
-#     # Provide a new name to rename an existing label
-#     new_name: first-timers-only
+  - name: Help Wanted
+    # Provide a new name to rename an existing label
+    new_name: first-timers-only
 
 # Milestones: define milestones for Issues and Pull Requests
 # milestones:
